--- a/index.html
+++ b/index.html
@@ -9,33 +9,158 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous"> -->
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/index.css" rel="stylesheet">
 
 </head>
-<header>
-    <!-- header -->
-    <div class="mainHeader">
-        <!-- navbar -->
-        <div class="menuButton">
-
-            <a href="#" class="btn btn-default btn-lg navButton">
-                <span class="glyphicon glyphicon-th"></span>
-            </a>
-        </div>
-        <div class="logo">
-            <h1 class="logoText">MSIG</h1>
-        </div>
-        <div class="searchButton">
-            <a href="#" class="btn btn-default btn-lg navButton">
-                <span class="glyphicon glyphicon-search"></span>
-            </a>
-        </div>
-    </div>
-    =
-</header>
 
 <body>
+    <header>
+        <!-- header -->
+        <div class="mainHeader">
+            <!-- navbar -->
+            <div class="menuButton">
+                <a href="#" class="btn btn-default btn-lg navButton navMenuButton">
+                    <span class="glyphicon glyphicon-th"></span>
+                </a>
+            </div>
+            <div class="logo">
+                <p class="logoText">MSIG</p>
+            </div>
+            <div class="searchButton">
+                <a href="#" class="btn btn-default btn-lg navButton navSearchButton">
+                    <span class="glyphicon glyphicon-search"></span>
+                </a>
+            </div>
+        </div>
+        <div class="banner">
+        </div>
+        <div class="headerBreadcrumb">
+            <ol class="breadcrumb">
+                <li><a href="/">MSIG</a></li>
+                <li class="active">Contact Us</li>
+            </ol>
+        </div>
+    </header>
+    <section class="container introSection">
+        <div class="intro m-2">
+            <h2>Get in Touch</h2>
+        </div>
+        <div class="introParagraph pt-3">
+            <p>At MSIG, we are deeply committed to serve you better. With our dedicated team of Customer Service Officers, we are here to help you with any queries and concerns you may have regarding our products and services. Should you require reach out
+                to us via the available channels below.</p>
+        </div>
+    </section>
+
+    <section id="mobileTab" class="container flex-container formSection">
+        <div style="padding-left:10px; padding-right:10px;">
+            <ul class="nav nav-pills navSection">
+                <li class="active"><a data-toggle="pill" href="#writeToUs">Write To Us</a></li>
+                <li><a data-toggle="pill" href="#contactUs">Contact Us</a></li>
+            </ul>
+
+            <div class="tab-content">
+                <div id="writeToUs" class="tab-pane fade in active">
+                    <div id="writeToUs" class="switchTabContent flexItem1">
+                        <p class="bigBlueFont">Write to us your questions, feedback, or request to change your personal details.</p>
+                        <!-- radiobuttonStartsHere -->
+                        <div class="enquirySection">
+                            <p>Please choose one of the below:*</p>
+                            <input type="radio" name="typeofEnquiry" id="generalEnquiry" value="General Enquiry">
+                            <label for="generalEnqury">General Enquiry</label>
+                            <br>
+                            <input type="radio" name="typeofEnquiry" id="productEnquiry" value="Product Enquiry">
+                            <label for="productEnqury">Product Enquiry</label>
+                            <br>
+                            <input type="radio" name="typeofEnquiry" id="feedbackComplaint" value="Feedback/Complaint">
+                            <label for="feedbackComplaint">Feedback/Complaint</label>
+                            <br>
+                            <input type="radio" name="typeofEnquiry" id="changeOfPersonal" value="Change of Personal Details">
+                            <label for="changeOfPersonal">Change of Personal Details</label>
+                        </div>
+                        <!-- radioButtonEndsHere -->
+                        <!-- general inquiry form: -->
+                        <div id="generalEnquiryForm" class="formContainer">
+                            <div class="formTitle">
+                                <p class="bigBlueFont p-l-r-15">General Enquiry Form</p>
+                                <p class="redText p-l-r-15">(*) Required information</p>
+                            </div>
+                            <div>
+                                <p class="p-l-r-15 p-t-b-15">Use the form below to drop us an email and we will be in touch with you soon.</p>
+                                <div class="generalEnquirySection">
+
+                                    <!-- yes/no existing customer?  -->
+                                    <div class="p-l-r-15 p-t-b-15">
+                                        <p> Are you an existing MSIG customer?</p>
+                                        <input type="radio" name="existingCustomer" id="existingCustomerYes" value="Yes">
+                                        <label for="generalEnqury">Yes </label>
+
+                                        <input type="radio" name="existingCustomer" id="existingCustomerNo" value="No">
+                                        <label for="productEnqury">No </label>
+                                    </div>
+                                    <!-- end yes/no existing customer  -->
+                                    <form action="#" class="geForm p-l-r-15">
+                                        <label for="fullName"></label><br>
+                                        <input type="text" id="fullName" name="fullName" placeholder="Full Name*">
+                                        <br>
+                                        <label for="email"></label><br>
+                                        <input type="text" id="email" name="email" placeholder="Email Address*">
+                                        <br>
+                                        <label for="contactNumber"></label><br>
+                                        <input type="number" id="contactNumber" name="contactNumber" placeholder="Contact Number*">
+                                        <br>
+                                        <label for="policyNumber"></label><br>
+                                        <input type="text" id="policyNumber" name="policyNumber" placeholder="Policy Number (if applicable)">
+                                        <br>
+                                        <label for="message"></label><br>
+                                        <input type="text" id="message" name="message" placeholder="Message*">
+                                        <br>
+                                        <div class=" recaptcha">
+                                            <div class="g-recaptcha" id="rcaptcha" data-sitekey="site key"></div>
+                                            <span id="captcha" style="color:red"></span>
+                                            <!-- this will show captcha errors -->
+                                        </div>
+                                        <div>
+                                            <div class="p-t-b-15">
+                                                <input type="submit" value="Submit">
+                                            </div>
+                                            <div class="p-t-b-15">
+                                                <input type="reset" value="Clear">
+                                            </div>
+                                        </div>
+
+                                    </form>
+                                </div>
+
+                            </div>
+                        </div>
+                        <!-- general inquiry form ends here -->
+                    </div>
+                </div>
+                <!-- contact us TAB:  -->
+                <div id="contactUs" class="tab-pane fade">
+                    <div id="contactUs" class="switchTabContent flexItem2">
+                        <div class="jumbotron">
+                            <h2 style="border-bottom:2px solid black">24 Hours Assist Helplines</h2>
+                            <div class="d-flex flex-column">
+                                <div class="p-2">Flex item 1</div>
+                                <div class="p-2">Flex item 2</div>
+                                <div class="p-2">Flex item 3</div>
+                                <div class="p-2">Flex item 3</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end of contact us TAB  -->
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+
+</footer>
 
 </html>
